--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 [data-theme="light"] {
   --bg: #e974e9;
-  --card-bg: #cc5792;
+  --card-bg: #c48ccb;
   --nav-bg: #f8f8f8;
   --text: #121212;
   --text-secondary: #f5ebf3;
