--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@
   --card-bg: #c48ccb;
   --nav-bg: #f8f8f8;
   --text: #121212;
-  --text-secondary: #f5ebf3;
+  --text-secondary: #423e3e;
   --accent: #4a00e0;
   --accent-hover: #6a00ff;
   --shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
