--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 
 [data-theme="light"] {
   --bg: #9a61d0;
-  --card-bg: #c48ccb;
+  --card-bg: #f5edf6;
   --nav-bg: #f8f8f8;
   --text: #121212;
   --text-secondary: #423e3e;
